--- a/package.json
+++ b/package.json
@@ -9,18 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
+    "@balancer/sdk": "^0.0.2",
     "@rainbow-me/rainbowkit": "^1.0.0",
+    "antd": "^5.5.0",
+    "lodash": "^4.17.21",
     "next": "^12.2.6",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.0",
     "viem": "~0.3.19",
-    "wagmi": "^1.0.1"
+    "wagmi": "^1.0.5"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.35",
+    "@types/numeral": "^2.0.2",
     "@types/react": "^18.0.9",
     "eslint": "^8.15.0",
     "eslint-config-next": "^12.2.6",
-    "typescript": "^5.0.4"
+    "prettier": "^2.8.8",
+    "typescript": "4.9.4"
   }
 }
